--- a/Student_Data_Challenge_Starter_Code/Unsolved/Student_Data_Challenge_Starter_Code_solved.ipynb
+++ b/Student_Data_Challenge_Starter_Code/Unsolved/Student_Data_Challenge_Starter_Code_solved.ipynb
@@ -1503,41 +1503,17 @@
     "(ii) RESULTS\n",
     "Using a Jupyter Notebook as a medium for Python, it was possible to clean the data set.  The first step of cleaning was the removal of null and duplicate values which may have had an adverse effect on analysis.  In this case a total of 2950 \"null\" (or \"missing\") values and 1836 duplicated rows were purged from the data set.  The second of cleaning was identifying and altering or removing any \"problematic\" or \"messy\" data types which may interfere with analysis.  In this case, the \"grade\" column was identified as \"object\" data type, due to the inclusion of \"th\" with all entries in the column, which would have limited the mathematical analysis that could be performed using that column.  As such, all entries in the \"grade\" column were altered, to remove the \"th\", and redesignated as \"integer\" data type.\n",
     "\n",
-    "Once cleaned, and continuing to use a Jupyter Notebook as an interface for Python, it was possible to use the data set to generate summary statistics (mean, standard deviation, quartiles, etc.) for all schools (See Figure 1), to examine performance at a specified grade level across all schools, isolate individual test results meeting specified criteria and to examine performance of all students enrolled at a specified high school.  Moreover, using the \"groupby\" feature in conjunction with the \"sort_values\", \"count()\" and \"mean()\" operations, it was possible to directly compare Charter Schools to Public Schools in terms of their average annual budgets (See Figure 2) and the average standardised test scores both for the school types as whole (See Figure 3) and by grade level within the school types.\n",
+    "Once cleaned, and continuing to use a Jupyter Notebook as an interface for Python, it was possible to use the data set to generate summary statistics (mean, standard deviation, quartiles, etc.) for all schools (See Figure 1), to examine performance at a specified grade level across all schools, isolate individual test results meeting specified criteria and to examine performance of all students enrolled at a specified high school.  \n",
     "\n",
+    "![](https://github.com/Scruffy-Bearie/School_District_Analysis/blob/main/Student_Data_Challenge_Starter_Code/Unsolved/Figure%202%20and%203.png)\n",
     "\n",
-    "Figure 1: Summary Statistics For All Schools\n",
+    "Moreover, using the \"groupby\" feature in conjunction with the \"sort_values\", \"count()\" and \"mean()\" operations, it was possible to directly compare Charter Schools to Public Schools in terms of their average annual budgets (See Figure 2) and the average standardised test scores both for the school types as whole (See Figure 3) and by grade level within the school types.\n",
     "\n",
-    "        student_id\t     grade\t     reading_score\t     math_score\t     school_budget\n",
-    "count\t1.483100e+04\t14831.000000\t14831.000000\t14831.000000\t14831.000000\n",
-    "mean\t6.975296e+07\t10.355539\t    72.357865\t    64.675733\t    893742.749107\n",
-    "std\t    3.452909e+07\t1.097728\t    15.224590\t    15.844093\t    53938.066467\n",
-    "min\t    1.000906e+07\t9.000000\t    10.500000\t    3.700000\t    817615.000000\n",
-    "25%\t    3.984433e+07\t9.000000\t    62.200000\t    54.500000\t    846745.000000\n",
-    "50%\t    6.965978e+07\t10.000000\t    73.800000\t    65.300000\t    893368.000000\n",
-    "75%\t    9.927449e+07\t11.000000\t    84.000000\t    76.000000\t    956438.000000\n",
-    "max\t    1.299997e+08\t12.000000\t    100.000000\t    100.000000\t    991918.000000\n",
-    "\n",
-    "\n",
-    "Figure 2: Average School Budget for Charter and Public Schools\n",
-    "\n",
-    "                school_budget\n",
-    "school_type\t\n",
-    "Charter\t        872625.7\n",
-    "Public\t        911195.6\n",
-    "\n",
-    "\n",
-    "Figure 3: Average Math and Reading Scores for Charter and Public Schools\n",
-    "\n",
-    "               math_score\treading_score\n",
-    "school_type\t\t\n",
-    "Charter\t          66.8\t       72.5\n",
-    "Public\t          63.0\t       72.3\n",
-    "\n",
+    "![](https://github.com/Scruffy-Bearie/School_District_Analysis/blob/main/Student_Data_Challenge_Starter_Code/Unsolved/Figure%202%20and%203.png)\n",
     "\n",
     "(iii) Analysis\n",
     "Although the results demonstrate a difference in the standardised test scores for Charter Schools as compared to Public Schools, \n",
-    "the difference, as compared to the standard deviation in the scores for the population as a whole (15.2 and 15.8 respectively), could easily be attributed to sampling error.  That said, and given the nominal difference in average annual school budgets within the district, $872625.7/year for Charter Schools and $911195.6/year for Public schools, it would seem that continued public funding of the Charter Schools is justified.  However, given the magnitude of public funds involved, the importance of upholding academic standards and ensuring quality education for all students, further analysis should be conducted to examine the number of students enrolled at each school type as compared to the operating costs for each school type - i.e determine the average $/student.year of public funds being spent  at each school type - before formally committing to or continuing with any funding model."
+    "the difference, as compared to the standard deviation in the scores for the population as a whole (15.2 and 15.8 respectively), could easily be attributed to sampling error.  That said, and given the nominal difference in average annual school budgets within the district, 872625.7 USD/year for Charter Schools and 911195.6 USD/year for Public schools, it would seem that continued public funding of the Charter Schools is justified.  However, given the magnitude of public funds involved, the importance of upholding academic standards and ensuring quality education for all students, further analysis should be conducted to examine the number of students enrolled at each school type as compared to the operating costs for each school type - i.e determine the average $/student.year of public funds being spent  at each school type - before formally committing to or continuing with any funding model."
    ]
   }
  ],
